--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </a>
         </div>
         <div class="popup-quote">
-          Web Developer who interested in the world of Software Development, Technology in general.
+          discover top-quality products at unbeatable prices!
         </div>
         <a class="popup-close" onclick="history.back()">&times;</a>
       </div>
@@ -51,24 +51,24 @@
 
     <div id="links">
       <a class="link" href="https://earl041.github.io/Earl-Store/" target="_blank">
-        <i class="fab fa-github">&nbsp;</i>Github
+        <i class="fab fa-github">&nbsp;</i>Earl Store
       </a>
       <a class="link" href="https://earl041.github.io/Suprises-By-Earl/" target="_blank">
-        <i class="fab fa-whatsapp">&nbsp;</i>WhatsApp
+        <i class="fab fa-whatsapp">&nbsp;</i>Web Surprise 
       </a>
-      <a class="link" href="https://tiktok.com/@flow.falcon" target="_blank">
+      <a class="link" href="tiktok.com/@earllyzer" target="_blank">
         <i class="fab fa-tiktok">&nbsp;</i>Tiktok
       </a>
-      <a class="link" href="https://FlowFalcon.xyz/" target="_blank">
-        <i class="fas fa-globe">&nbsp;</i>Personal Website
+      <a class="link" href="https://tinyurl.com/38uv9ufr" target="_blank">
+        <i class="fas fa-globe">&nbsp;</i>BOT CONFESS
       </a>
-      <a class="link" href="https://whatsapp.com/channel/0029VasjrIh3gvWXKzWncf2P" target="_blank">
+      <a class="link" href="https://whatsapp.com/channel/0029Vaxojb69RZAaPZLsvt06P" target="_blank">
         <i class="fab fa-whatsapp">&nbsp;</i>WhatsApp Channel
       </a>
     </div>
 
     <div id="hashtag">
-      #FlowFalcon - Learn Coding
+      #Earl Store - Virtual Store
     </div>
   </body>
 </html>
