--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="discover top-quality products at unbeatable prices! .">
     <meta name="keywords" content="EarlStore, SUPRISE WEB, Earl, TZE, TZE">
     <meta property="og:url" content="https://flowfalcon.xyz/linktree" />
-    <meta property="og:title" content="FlowFalcon - Learn Coding" />
-    <meta property="og:image" content="https://flowfalcon.xyz/img/prof.jpg"/>
-    <title>FlowFalcon | Linktree</title>
+    <meta property="og:title" content="Earl Store - Virtual Store" />
+    <meta property="og:image" content="https://files.catbox.moe/8h5swm.jpg"/>
+    <title>Earl Store | Linktree</title>
     <!-- Favicon -->
       <link rel="icon" href="https://files.catbox.moe/sdtn5t.png" type="image/x-icon" />
     <!-- Font Awesome icons -->
