--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div id="links">
       <a class="link" href="https://earl041.github.io/Earl-Store/" target="_blank">
-        <i class="fab fa-github">&nbsp;</i>Earl Store
+        <i class="fa-duotone fa-solid fa-crown">&nbsp;</i>Earl Store
       </a>
       <a class="link" href="https://earl041.github.io/Suprises-By-Earl/" target="_blank">
         <i class="fab fa-whatsapp">&nbsp;</i>Web Surprise 
@@ -60,7 +60,7 @@
         <i class="fab fa-tiktok">&nbsp;</i>Tiktok
       </a>
       <a class="link" href="https://tinyurl.com/38uv9ufr" target="_blank">
-        <i class="fas fa-globe">&nbsp;</i>BOT CONFESS
+        <i class="fab fa-bots">&nbsp;</i>BOT CONFESS
       </a>
       <a class="link" href="https://whatsapp.com/channel/0029Vaxojb69RZAaPZLsvt06P" target="_blank">
         <i class="fab fa-whatsapp">&nbsp;</i>WhatsApp Channel
