--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <i class="fab fa-tiktok">&nbsp;</i>Tiktok
       </a>
       <a class="link" href="https://tinyurl.com/38uv9ufr" target="_blank">
-        <i class="fab fa-bots">&nbsp;</i>BOT CONFESS
+        <i class="fa-brands fa-bots">&nbsp;</i>BOT CONFESS
       </a>
       <a class="link" href="https://whatsapp.com/channel/0029Vaxojb69RZAaPZLsvt06P" target="_blank">
         <i class="fab fa-whatsapp">&nbsp;</i>WhatsApp Channel
