--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="discover top-quality products at unbeatable prices! .">
     <meta name="keywords" content="EarlStore, SUPRISE WEB, Earl, TZE, TZE">
-    <meta property="og:url" content="https://flowfalcon.xyz/linktree" />
+    <meta property="og:url" content="https://earl041.github.io/LinkTree/" />
     <meta property="og:title" content="Earl Store - Virtual Store" />
     <meta property="og:image" content="https://files.catbox.moe/8h5swm.jpg"/>
     <title>Earl Store | Linktree</title>
@@ -54,13 +54,13 @@
         <i class="fas fa-globe">&nbsp;</i>Earl Store
       </a>
       <a class="link" href="https://earl041.github.io/Suprises-By-Earl/" target="_blank">
-        <i class="fab fa-whatsapp">&nbsp;</i>Web Surprise 
+        <i class="fas fa-globe">&nbsp;</i>Web Surprise 
       </a>
       <a class="link" href="tiktok.com/@earllyzer" target="_blank">
         <i class="fab fa-tiktok">&nbsp;</i>Tiktok
       </a>
       <a class="link" href="https://tinyurl.com/38uv9ufr" target="_blank">
-        <i class="fas fa-globe">&nbsp;</i>BOT CONFESS
+        <i class="fab fa-whatsapp">&nbsp;</i>BOT CONFESS
       </a>
       <a class="link" href="https://whatsapp.com/channel/0029Vaxojb69RZAaPZLsvt06P" target="_blank">
         <i class="fab fa-whatsapp">&nbsp;</i>WhatsApp Channel
