--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <a class="link" href="https://earl041.github.io/Suprises-By-Earl/" target="_blank">
         <i class="fas fa-globe">&nbsp;</i>Web Surprise 
       </a>
-      <a class="link" href="tiktok.com/@earllyzer" target="_blank">
+      <a class="link" href="https://www.tiktok.com/@earllyzer" target="_blank">
         <i class="fab fa-tiktok">&nbsp;</i>Tiktok
       </a>
       <a class="link" href="https://tinyurl.com/38uv9ufr" target="_blank">
